Use OpenAI Codex for command generation

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,5 +11,16 @@ Style/StringLiteralsInInterpolation:
   Enabled: true
   EnforcedStyle: double_quotes
 
+Style/TrailingCommaInHashLiteral:
+  Enabled: true
+  EnforcedStyleForMultiline: comma
+
+Style/TrailingCommaInArguments:
+  Enabled: true
+  EnforcedStyleForMultiline: comma
+
+Style/Documentation:
+  Enabled: false
+
 Layout/LineLength:
   Max: 120
