--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -19,8 +19,15 @@ Style/TrailingCommaInArguments:
   Enabled: true
   EnforcedStyleForMultiline: comma
 
+Style/TrailingCommaInArrayLiteral:
+  Enabled: true
+  EnforcedStyleForMultiline: comma
+
 Style/Documentation:
   Enabled: false
 
+Layout/MultilineMethodCallIndentation:
+  Enabled: false
+
 Layout/LineLength:
-  Max: 120
+  Enabled: false
