--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,4 @@ services:
     env_file: .env
     volumes:
       - '.:/app'
-      - './config.yml:/root/.config/please/config.yml:ro'
+      - './config:/root/.config/please:ro'
